--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" href="icons/icon-192.png">
 
 <head>
-<meta charset="utf-8">
+  <meta charset="utf-8">
 <title>Traceur randonnée val6.5.2 -> 6.6 mobile - IBP - thunderforest</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -78,72 +78,89 @@ body {
   }
 
   /* ===== DOCK GPS FLOTTANT (unique, propre) ===== */
-  .leaflet-control.custom-panel {
-    position: fixed !important;
-    bottom: 14px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    background: transparent !important;
-    border: none !important;
-    box-shadow: none !important;
-    padding: 0;
-    width: auto;
-    z-index: 1500;
-    pointer-events: auto;   /* important : doit accepter les clics */
-  }
+  /* ===== DOCK GPS FLOTTANT (unique, propre) ===== */
+.leaflet-control.custom-panel {
+  position: fixed !important;
+  bottom: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  background: transparent !important;
+  border: none !important;
+  box-shadow: none !important;
+  padding: 0;
+  width: auto;
+  z-index: 1500;
+  pointer-events: auto;
+}
 
-  .icon-grid {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 8px;
-    align-items: center;
-    pointer-events: auto;
-    padding: 6px;
-    background: rgba(0,0,0,0.10);
-    border-radius: 28px;
-  }
+/* Conteneur d'icônes : plus fluide et responsive.
+   On retire le fond gris, on autorise le retour à la ligne
+   et on limite la largeur pour éviter le débordement. */
+.icon-grid {
+  display: flex;
+  flex-wrap: wrap;               /* permet de passer à la ligne si l'espace manque */
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+  pointer-events: auto;
+  padding: 6px;
+  background: transparent;       /* suppression du fond gris */
+  border-radius: 28px;
+  max-width: 94vw;               /* ne dépasse jamais l'écran (quelques px de marge) */
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  overflow: hidden;              /* évite les débordements visuels */
+}
 
-  .icon-btn {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    border: none;
-    background: rgba(0,0,0,0.35);
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.30);
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-  }
+/* Boutons : tailles fluides avec clamp pour rester lisibles,
+   taille minimale/ max contrôlées ; suppression des gros fonds opaques. */
+.icon-btn {
+  width: clamp(30px, 8vw, 44px);   /* min 30px, max 44px, s'adapte selon l'écran */
+  height: clamp(30px, 8vw, 44px);
+  border-radius: 50%;
+  border: none;
+  background: rgba(0,0,0,0.18);    /* si vous voulez totalement transparent => transparent */
+  color: #fff;
+  font-size: clamp(14px, 4.2vw, 18px);
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.18);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  flex: 0 0 auto;                  /* empêche les boutons d'étirer leur largeur */
+  min-width: 0;
+}
 
-  .icon-btn.secondary { background: rgba(0,0,0,0.22); }
-  .icon-btn.recording { background: rgba(180,0,0,0.6); animation: pulse 1.2s infinite; }
-  @keyframes pulse { 0%{transform:scale(1);}50%{transform:scale(1.08);}100%{transform:scale(1);} }
+/* variantes */
+.icon-btn.secondary { background: rgba(0,0,0,0.12); }
+.icon-btn.recording { background: rgba(180,0,0,0.65); animation: pulse 1.2s infinite; }
 
-  .icon-btn:active { transform: scale(0.92); }
+.icon-btn:active { transform: scale(0.92); }
 
-  /* ===== BOUTON PLEIN ECRAN (non superposé au dock) ===== */
-  .fullscreen-btn {
-    position: fixed;
-    bottom: 78px;   /* remonte au-dessus du dock */
-    right: 10px;
-    z-index: 1600;
-    background: rgba(0,0,0,0.35);
-    color: white;
-    border: none;
-    border-radius: 30px;
-    padding: 8px 12px;
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    display: none;
-    cursor: pointer;
-  }
-  @media (max-width:768px){ .fullscreen-btn{ display:block; } }
+/* ajustements pour très petits écrans : réduire gaps et padding */
+@media (max-width:420px){
+  .icon-grid { gap: 6px; padding: 4px; max-width: 98vw; }
+  .icon-btn { width: clamp(28px, 9vw, 40px); height: clamp(28px, 9vw, 40px); font-size: clamp(13px, 4.8vw, 16px); }
+  .top-bar { top: 8px; padding: 6px 8px; }
+}
+
+/* si vous préférez un défilement horizontal au lieu du wrap sur téléphones,
+   remplacez .icon-grid rules par ces options (décommentez et testez si vous préférez) :
+
+.icon-grid {
+  display:flex;
+  gap:8px;
+  overflow-x:auto;
+  white-space:nowrap;
+  -webkit-overflow-scrolling:touch;
+  padding:6px;
+  background:transparent;
+}
+*/
+
 
   /* ===== FULLSCREEN MODE ===== */
   body.fullscreen #map { height: 100vh !important; }
@@ -591,6 +608,55 @@ function toggleInfoPanel(){
 }
 
 </script>
+<script>
+  const input = document.getElementById('searchInput');
+
+  // ✅ Validation avec la touche Entrée (CR)
+  input.addEventListener('keydown', function (e) {
+    if (e.key === 'Enter' && !e.isComposing) {
+      e.preventDefault();
+      const query = input.value.trim();
+      if (!query) return;
+      searchWithNominatim(query);
+    }
+  });
+
+  // ✅ Recherche réelle avec Nominatim + centrage carte
+  function searchWithNominatim(query) {
+    const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}`;
+
+    fetch(url)
+      .then(res => res.json())
+      .then(results => {
+        if (!results || results.length === 0) {
+          alert("Aucun résultat trouvé");
+          return;
+        }
+
+        const lat = parseFloat(results[0].lat);
+        const lon = parseFloat(results[0].lon);
+
+        // ✅ Centre la carte (⚠️ votre carte doit s'appeler "map")
+        map.setView([lat, lon], 14);
+
+        // ✅ Supprime l’ancien marqueur si présent
+        if (window.searchMarker) {
+          map.removeLayer(window.searchMarker);
+        }
+
+        // ✅ Nouveau marqueur
+        window.searchMarker = L.marker([lat, lon]).addTo(map)
+          .bindPopup(results[0].display_name)
+          .openPopup();
+      })
+      .catch(err => {
+        console.error("Erreur Nominatim :", err);
+        alert("Erreur lors de la recherche");
+      });
+  }
+</script>
+
+
 
 </body>
 </html>
