--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
     z-index:1400;
     padding:6px 10px;
     border-radius:20px;
-    background: rgba(255,255,255,0.92);
-    box-shadow: 0 6px 18px rgba(0,0,0,0.12);
     align-items:center;
     pointer-events:auto;
   }
   .top-bar input[type="text"], .top-bar input[type="search"]{ padding:6px 10px; border-radius:12px; border: none; height:34px; width:160px; }
-  .file-pill { display:inline-flex; align-items:center; gap:8px; border-radius:12px; padding:6px 8px; background:white; height:34px; }
+  .file-pill { display:inline-flex; align-items:center; gap:8px; border-radius:12px; padding:6px 8px; 
+  background:transparent !important; height:34px; }
   .file-pill button { border:none; background:var(--accent); color:white; padding:6px 10px; border-radius:8px; cursor:pointer; }
 
   /* Dock (bottom) safe area aware */
@@ -114,7 +113,7 @@
   <div id="startupPopup" style="position:fixed;inset:0;background:rgba(0,0,0,0.6);display:none;align-items:center;justify-content:center;z-index:5000;font-family:Arial;">
     <div style="background:#fff;padding:18px;border-radius:12px;max-width:340px;text-align:left;box-shadow:0 6px 20px rgba(0,0,0,0.25);">
       <h3 style="margin:0 0 6px 0;">👋 Bienvenue</h3>
-      <p style="margin:0 0 8px 0;font-size:13px;color:#333;">Activez le GPS pour un suivi optimal. Si les GPX semblent non reconnus sur mobile, utilisez le bouton “Importer GPX”.</p>
+      <p style="margin:0 0 8px 0;font-size:13px;color:#333;">Version 6.6.4. Activez le GPS pour un suivi optimal. Si les GPX semblent non reconnus sur mobile, utilisez le bouton “Importer GPX”.</p>
       <div style="text-align:right"><button onclick="closeStartupPopup()" style="background:var(--accent);color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;">OK</button></div>
     </div>
   </div>
@@ -124,8 +123,8 @@
     <input id="searchInput" type="search" placeholder="🔍 Rechercher un lieu" aria-label="Rechercher un lieu">
     <!-- visible tactile import button -->
     <div class="file-pill" role="button" aria-label="Importer GPX">
-      <span>📂 Importer GPX</span>
-      <button id="openFileBtn" title="Importer GPX">Importer</button>
+      <span></span>
+      <button id="openFileBtn" title="Importer GPX">Importer GPX</button>
       <span id="importStatus" aria-live="polite"></span>
     </div>
     <!-- hidden actual file input (we'll trigger it programmatically) -->
